--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Patatap Clone</title>
-    <meta name="description" content="A simple clone based of patatap.com">
+    <title>Color Swatch</title>
+    <meta name="description" content="A simple color swatch that fits to the available view window on load">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/css/style.css">
